Fix header z-index (#15836)

--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -46,6 +46,7 @@ html {
 .site-header {
     position: fixed;
     width: 100%;
+    z-index: 999;
 }
 
 
